bgd/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: bgd
  name: bgd
spec:
  host: "bgd-bgd.apps.arod.isd.upmc.edu"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd
    weight: 100
status: {}
